// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextLink Primary 1`] = `
.c0 {
  color: #61dafb;
  font-weight: normal;
}

<a
  className="c0"
  color="blue"
  href="http://localhost:6006"
>
  TextLink
</a>
`;

exports[`Storyshots Components/TextLink Primary Bold 1`] = `
.c0 {
  color: #61dafb;
  font-weight: bold;
}

<a
  className="c0"
  color="blue"
  href="http://localhost:6006"
>
  TextLink
</a>
`;

exports[`Storyshots Components/TextLink Secondary 1`] = `
.c0 {
  color: #ccc;
  font-weight: normal;
}

<a
  className="c0"
  color="gray"
  href="http://localhost:6006"
>
  TextLink
</a>
`;

exports[`Storyshots Components/TextLink Secondary Bold 1`] = `
.c0 {
  color: #ccc;
  font-weight: bold;
}

<a
  className="c0"
  color="gray"
  href="http://localhost:6006"
>
  TextLink
</a>
`;
